--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -6,7 +6,10 @@ $blue: #167FFB;
 $yellow: #FFC65A;
 $orange: #E67E22;
 $green: #1EDD88;
+
+$white: #FFFFFF;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
 $dark-gray: #393939;
+$mib: #161623;
 $black: #000000;
